@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-25T08:21:42Z",
+  "timestamp" : "2022-07-25T16:21:13Z",
   "count_outdated" : 413,
   "uniques_outdated" : 238,
-  "count" : 438,
+  "count" : 439,
   "uniques" : 254,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
