@@ -1,3 +1,10 @@
+2022-07-25T16:21:13Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 238 413 / 254 438
+* notice: next accum: outdated-unq outdated-all / unq all: 238 413 / 254 439
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-25]
+
 2022-07-25T08:21:42Z:
 * notice: last 14d: unq all: 4 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 238 413 / 253 438
